Fixed jumpy nav bar, touched up animations

--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,7 @@ header {
   position: fixed;
   width: 100%;
   z-index: 1001;
+  transition: 0.5s;
 }
 @media (max-width: 500px) {
   header {
@@ -236,13 +237,15 @@ header a {
 header .dropdown-button {
   padding-right: 7.5%;
   padding-top: 7px;
+  width: 25px;
+  height: 30px;
 }
 .dropdown-content {
   position: fixed;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
-  margin-top: 39px;
+  margin-top: 43.5px;
   padding-top: 118px;
   background: #99a4af;
   display: flex;
@@ -523,7 +526,7 @@ h2 {
   border: 1px solid #222222;
   color: #FFFFFF;
   background: #222222;
-  transition: 0.4s ease-in-out;
+  transition: 0.3s ease-in-out;
   box-shadow: inset 0 0 0 25px #222222;
 }
 .services .tabs .tab-link-selected {
