--- a/less/header.less
+++ b/less/header.less
@@ -5,6 +5,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1001;
+    transition: 0.5s;
 
     @media @mobile {
         padding: 10px 0;
@@ -27,6 +28,8 @@ header {
     .dropdown-button {
         padding-right: 7.5%;
         padding-top: 7px;
+        width: 25px;
+        height: 30px;
     }
 }
 
@@ -35,7 +38,7 @@ header {
     height: 100vh;
     width: 100vw;
     z-index: 1000;
-    margin-top: 39px;
+    margin-top: 43.5px;
     padding-top: 118px;
     background: @navcolor;
     .flex(column, nowrap, flex-start, center);
