--- a/less/mixins.less
+++ b/less/mixins.less
@@ -20,7 +20,7 @@
         border: 1px solid @darkgrey;
         color: @white;
         background: @darkgrey;
-        transition: .4s ease-in-out;
+        transition: .3s ease-in-out;
         box-shadow: inset 0 0 0 25px @darkgrey;
     }
 }
